--- a/install
+++ b/install
@@ -14,6 +14,7 @@ fi
 
 # Install required packages
 apt install python3-pip -y
+apt install jq
 
 # Install specific versions of packages
 pip install python-openstackclient==5.8.0
